# chryso

./: .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  regress.yml  velox.yml
benches/: optimizer.rs  parser.rs
bindings/go/: README.md
bindings/java/: README.md
crates/adapter/: BUILD.bazel  Cargo.toml
crates/adapter-duckdb/: BUILD.bazel  Cargo.toml
crates/adapter-duckdb-ops/: Cargo.toml  build.rs
crates/adapter-duckdb-ops/src/: ffi.rs  lib.rs  plan.rs
crates/adapter-duckdb-ops/tests/: derived_aliases.rs
crates/adapter-duckdb/src/: lib.rs
crates/adapter-velox/: BUILD.bazel  Cargo.toml  build.rs
crates/adapter-velox/src/: ffi.rs  lib.rs  plan.rs
crates/adapter/src/: lib.rs
crates/core/: BUILD.bazel  Cargo.toml
crates/core/src/: diagnostics.rs  error.rs  lib.rs  sql_format.rs  statement.rs  system_params.rs
crates/core/src/ast/: mod.rs
crates/metadata/: BUILD.bazel  Cargo.toml
crates/metadata/src/: analyze.rs  catalog.rs  catalog_tests.rs  functions.rs  lib.rs  type_coercion.rs  type_inference.rs  types.rs
crates/optimizer/: BUILD.bazel  Cargo.toml
crates/optimizer/src/: column_prune.rs  cost.rs  cost_profile.rs  enforcer.rs  estimation.rs  expr_rewrite.rs  join_order.rs  lib.rs  memo.rs  physical_rules.rs  plan_fingerprint.rs  properties.rs  rules.rs  stats_collect.rs  subquery.rs  utils.rs
crates/parser/: BUILD.bazel  Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: golden.rs
crates/parser/tests/testdata/golden/mysql/: basic.out  basic.sql
crates/parser/tests/testdata/golden/pg/: basic.out  basic.sql
crates/parser/tests/testdata/postgres_regress/: README.md  files.txt
crates/parser_yacc/: Cargo.toml  build.rs
crates/parser_yacc/grammar/: sql.l  sql.y
crates/parser_yacc/src/: lib.rs
crates/planner/: BUILD.bazel  Cargo.toml
crates/planner/src/: cost.rs  explain.rs  lib.rs  plan_diff.rs  serde.rs  validate.rs
docs/: ADAPTERS.md  ARCHITECTURE.md  BAZEL.md  COST_MODEL.md  EXAMPLES.md  EXPLAIN_FORMAT.md  FFI.md  PARSER.md  ROADMAP.md  RULES.md  TESTING.md  TODO_OPTIMIZE_500.md  velox_adapter.md
examples/: duckdb_demo.rs  velox_demo.rs
ffi/: Cargo.toml
ffi/duckdb/: CMakeLists.txt  README.md
ffi/duckdb/include/: chryso_duckdb_ffi.h
ffi/duckdb/src/: chryso_duckdb_ffi.cpp
ffi/src/: lib.rs
ffi/velox/: CMakeLists.txt
ffi/velox/include/: velox_ffi.h
ffi/velox/src/: velox_ffi.cpp
ffi/velox/tests/: velox_ffi_escape_test.cpp
scripts/: build_velox_ffi.sh  cost_calibrate.sh  sync_postgres_regress_subset.sh
src/: config.rs  lib.rs  main.rs  pipeline.rs  session.rs  sql_utils.rs  test_support.rs
tests/: duckdb_ops_pipeline.rs  duckdb_pipeline.rs  pipeline.rs  plan_snapshot.rs  postgres_regress_exec_subset.rs  postgres_regress_subset.rs
tests/testdata/plan/case1/: in.json  out.json
tests/testdata/plan_baseline/case1/: in.json  out.json
tests/testdata/stats/: tpch_scale1.json
tools/chryso-bench/: Cargo.toml  README.md
tools/chryso-bench/.cargo/: config.toml
tools/chryso-bench/src/: main.rs
