[package]
name = "chryso"
version.workspace = true
edition = "2024"
description = "Chryso is a Calcite-style SQL parser + optimizer engine in Rust."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
serde_json = "1"

[dev-dependencies.chryso-parser-yacc]
version = "0.0.2"
path = "crates/parser_yacc"

[workspace]
members = [
  "crates/adapter",
  "crates/adapter-duckdb",
  "crates/adapter-velox",
  "crates/core",
  "crates/metadata",
  "crates/optimizer",
  "crates/parser",
  "crates/parser_yacc",
  "crates/planner",
  "ffi",
]

[features]
default = []
duckdb = [ "dep:chryso-adapter-duckdb", "chryso-adapter-duckdb/bundled",]
velox = [ "dep:chryso-adapter-velox", "chryso-adapter-velox/velox-ffi",]
test-utils = []

[[bin]]
name = "chryso-cli"
path = "src/bin/chryso-cli.rs"
required-features = ["duckdb"]

[dependencies.chryso-adapter]
version = "0.0.2"
path = "crates/adapter"
default-features = false

[dependencies.chryso-adapter-duckdb]
version = "0.0.2"
path = "crates/adapter-duckdb"
optional = true
default-features = false

[dependencies.chryso-adapter-velox]
version = "0.0.2"
path = "crates/adapter-velox"
optional = true

[dependencies.chryso-core]
version = "0.0.2"
path = "crates/core"

[dependencies.chryso-metadata]
version = "0.0.2"
path = "crates/metadata"

[dependencies.chryso-optimizer]
version = "0.0.2"
path = "crates/optimizer"

[dependencies.chryso-parser]
version = "0.0.2"
path = "crates/parser"

[dependencies.chryso-planner]
version = "0.0.2"
path = "crates/planner"

[dev-dependencies.serde]
version = "1"
features = [ "derive",]

[workspace.package]
version = "0.0.2"
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso"
description = "Chryso is a Calcite-style SQL parser + optimizer engine in Rust."
