[package]
name = "chryso-ffi"
version = "0.0.1"
edition = "2024"
description = "Chryso ffi crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-ffi"

[lib]
crate-type = [ "cdylib", "staticlib",]

[dependencies.chryso]
version = "0.0.1"
path = ".."
