[package]
name = "chryso-adapter-duckdb-ops"
version.workspace = true
edition = "2024"
description = "DuckDB operator adapter for Chryso."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-adapter-duckdb-ops"
build = "build.rs"

[features]
default = []
duckdb-ops-ffi = []

[dependencies.chryso-adapter]
version = "0.0.2"
path = "../adapter"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"

[dependencies.chryso-planner]
version = "0.0.2"
path = "../planner"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
version = "1"
