load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

aliases(
    name = "aliases",
)

rust_library(
    name = "chryso_adapter_duckdb",
    crate_name = "chryso_adapter_duckdb",
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_library(
    name = "chryso_adapter_duckdb_bundled",
    crate_name = "chryso_adapter_duckdb",
    crate_features = ["bundled"],
    crate_root = "src/lib.rs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

