[package]
name = "chryso-adapter-duckdb"
version.workspace = true
edition = "2024"
description = "DuckDB adapter for Chryso."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-adapter-duckdb"

[features]
# TODO: Consider enabling `bundled` by default so `cargo test --features duckdb`
# works without a system libduckdb on workspace builds.
default = []
bundled = [ "duckdb/bundled",]

[dependencies.chryso-adapter]
version = "0.0.2"
path = "../adapter"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"

[dependencies.chryso-planner]
version = "0.0.2"
path = "../planner"

[dependencies.chryso-metadata]
version = "0.0.2"
path = "../metadata"

[dependencies.chryso-parser]
version = "0.0.2"
path = "../parser"

[dependencies.duckdb]
version = "1.4.3"

[dev-dependencies.chryso-parser-yacc]
version = "0.0.2"
path = "../parser_yacc"
