[package]
name = "chryso-adapter"
version = "0.0.1"
edition = "2024"

[dependencies]
chryso-core = { version = "0.0.1", path = "../core" }
chryso-planner = { version = "0.0.1", path = "../planner" }
chryso-metadata = { version = "0.0.1", path = "../metadata" }
chryso-parser = { version = "0.0.1", path = "../parser" }
duckdb = { version = "1.4.3", optional = true }

[features]
default = []
duckdb = ["dep:duckdb", "duckdb/bundled"]
