[package]
name = "chryso-adapter"
version.workspace = true
edition = "2024"
description = "Chryso adapter crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-adapter"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"

[dependencies.chryso-planner]
version = "0.0.2"
path = "../planner"
