[package]
name = "chryso-metadata"
version = "0.0.1"
edition = "2024"
description = "Chryso metadata crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-metadata"

[dependencies.chryso-core]
version = "0.0.1"
path = "../core"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
