[package]
name = "chryso-optimizer"
version.workspace = true
edition = "2024"
description = "Chryso optimizer crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-optimizer"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"

[dependencies.chryso-planner]
version = "0.0.2"
path = "../planner"

[dependencies.chryso-metadata]
version = "0.0.2"
path = "../metadata"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.toml]
version = "0.8"

[dev-dependencies.chryso-parser]
version = "0.0.2"
path = "../parser"
