[package]
name = "chryso-parser"
version = "0.0.2"
edition = "2024"
description = "Chryso parser crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-parser"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"
