[package]
name = "chryso-parser-yacc"
version.workspace = true
edition = "2024"
description = "Chryso parser-yacc crate."
license = "Apache-2.0"
repository = "https://github.com/hawkingrei/chryso"
homepage = "https://github.com/hawkingrei/chryso"
documentation = "https://docs.rs/chryso-parser-yacc"

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies.chryso-core]
version = "0.0.2"
path = "../core"

[dependencies.chryso-parser]
version = "0.0.2"
path = "../parser"

[build-dependencies]
lrlex = "0.13"
lrpar = "0.13"
cfgrammar = "0.13"
