[package]
name = "chryso-planner"
version = "0.0.1"
edition = "2024"

[dependencies]
chryso-core = { version = "0.0.1", path = "../core" }
chryso-metadata = { version = "0.0.1", path = "../metadata" }

[dev-dependencies]
chryso-optimizer = { version = "0.0.1", path = "../optimizer" }
chryso-parser = { version = "0.0.1", path = "../parser" }
